	  sockets.  From Lazlo Sitzer (2014-6-12).
	* arch/arm/src/sama5:  Add SAMA5D4 XDMAC driver.  Initial check-in is
	  just the DMAC driver with a few naming changes (2014-6-12).
	* configs/sama5d4x-ek/ramtest:  Add an SDRAM test configuration
	  (2014-6-14).
	* libc/stdio/lib_libsnoflush.c, lib_memsistream.c, and lib_memsostream.c:
	  Add support for seekable memory streams (2014-6-14).
	* libc/stdio/lib_rawsistream.c, and lib_rawsostream.c:  Add support for
	  seekable raw streams (2014-6-14).
	* libc/stdio/lib_stdsistream.c, and lib_stdsostream.c:  Add support for
	  seekable standard streams (2014-6-14).
	* configs/sam4x-xplained*/src/sam_buttons.c: Button interrupts not being
	  disabled after being detached.  (2014-6-15).
	* binfmt/binfmt_exec.c:  Fix a critical error in exec(); argv was not
	  being passed (2014-6-15).
	* arch/arm/src/sama5/sam_dmac.h:  Fix some critical typos in the SAMA5D3
	  DMA definitions (2014-6-17).
	* nuttx/net/net_send_unbuffered.c: Notify the device driver of the
	  availability of TX data.  From Daniel Lazlo Sitzer (2014-6-18).
	* net/net_close.c, net_send_unbuffered.c, socket.c, and uip_poll.c:
	  Various fixes for raw sockets from Daniel Lazlo Sitzer: (1) properly
	  free the socket in psock_close(), (2)  socket() returns failure when
	  there is no free socket/connection, and (3) Set number of bytes to
	  transmit is set in the uip_driver_s instance (2014-6-18).
	* net/tcp:  Move all TCP files from net/uip to net/tcp (2014-6-18).
	* net/udp:  Move all UDP files from net/uip to net/udp (2014-6-18).
	* net/pkt:  Move all AF_PACKET files from net/uip to net/pkt (2014-6-18).
	* net/Kconfig:  Add option to select CONFIG_NET_GUARDSIZE (2014-6-18).
	* net/net_send_buffered.c:  Add checks from buffer allocation failures.
	  from Max/Himax (2014-6-19).
	* tools/mkfsdata.pl:  Apparently, the trailing the 0x00 in http server
	  files is seen as a bug in javascript and images.  From Max/Himax
	  (2014-6-19).
